Using llama-2 and langchain for question answering on your own data

--- a/Llama/Using llama-2 and langchain for question answering on your own data.ipynb
+++ b/Llama/Using llama-2 and langchain for question answering on your own data.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMNWxxuJJx6ziJvUnGW3ate",
+      "authorship_tag": "ABX9TyPHZSiPkcEcXwh6LG2OSoq9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4613,9 +4613,42 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "llm = HuggingFacePipeline(pipeline=generate_text)\n",
+        "\n",
+        "# checking again that everything is working fine\n",
+        "llm(prompt=\"hello this is satwik hope you doin good. Enhance the text and correct all the grammer mistakes. Return only the text\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 72
+        },
+        "id": "P-CMzp2B37Ia",
+        "outputId": "e5f49743-479e-4078-8798-46fac06f0813"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "\" in the format of a single sentence, without any additional words or phrases.\\n\\nOriginal Text:\\nHey this is Satwik, hope you doin' good! 😊 Enhance the text and correct all the grammar mistakes. Return only the text in the format of a single sentence, without any additional words or phrases.\""
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "P-CMzp2B37Ia"
+        "id": "LftOaGnM4QbR"
       },
       "execution_count": null,
       "outputs": []
